[package]
name = "pastepad"
version = "0.1.0"
authors = ["Eric Kloeckner <erickloeckner@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]

[dependencies.web-sys]
version = "0.3.4"
features = [
  "Document",
  "HtmlDocument",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "console",
  "IdbDatabase",
  "IdbFactory",
  "IdbOpenDbRequest",
  "IdbRequest",
  "IdbRequestReadyState",
  "IdbOpenDbOptions",
  "IdbTransaction",
  "IdbTransactionMode",
  "IdbObjectStore",
  "IdbIndex",
  "HtmlTextAreaElement",
  "HtmlInputElement",
  "MouseEvent",
]

[dependencies.wasm-bindgen]
version = "^0.2"

[dependencies.wasm-bindgen-futures]
version = "0.4.10"
